# tessellation-puzzle-solver

./: .gitignore  CMakeLists.txt  DLXCPPLinker.cpp  Documentation.md  NodeMatrix.cpp  NodeMatrix.hpp  README.md  dlx.cpp  requirements.txt  runtests.py  shape_recognition.py  testlink.py  tps.py  try_shape_recognition.py
image_search/: detector.py
misc/: contour.py  piece.py  types.py
preprocessor/: PreProcessor.py
puzzle_generator/: Generator.py
puzzle_solver/: ExactCoverConverter.py  helper.py  solver.py
pythonRecognitionAndGeneration/: Documentation.md  JigsawResults.xlsx  JigsawResultsEvaluation.xlsx  README.md  TessellationDLXCPP_ALL2_Colour_Stats.xlsx  TessellationDLXCPP_ALL2_NoColour_Stats.xlsx  TessellationDLXCPP_ALL_Colour_Stats.xlsx  TessellationDLXCPP_ALL_NoColour_Stats.xlsx  TessellationEval.xlsx  evaluationScript.py  generator.py  requirements.txt  runtests.py  script-BKT-Timer.py  script-DLX-CPP-Timer.py  script-DLX-Timer.py  scriptExcelJigsaw.py  scriptExcelProcessed.py  scriptExcelTessellation.py  shape_recognition.py  shp_try.py  tps.py  ~$JigsawResults.xlsx
pythonRecognitionAndGeneration/image_search/: detector.py
pythonRecognitionAndGeneration/misc/: contour.py  piece.py  types.py
pythonRecognitionAndGeneration/preprocessor/: PreProcessor.py
pythonRecognitionAndGeneration/prevStats/: TessellationBKTColour.xlsx  TessellationBKTColour_Statistics.xlsx  TessellationBKTNoColour.xlsx  TessellationBKTNoColour_Stats.xlsx  (+9 more)
shape_finder/: finder.py
shape_processor/: processor.py
shape_rotation/: rotator.py
test/: solver_tests.py  suite.py
(+2500 files in other folders)
